log
Thu 28 Mar 2024 02:12:54 PM UTC: 
 tests:  0|6
total_score: 0/70
b57bf21
Thu 28 Mar 2024 02:15:55 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
db9ba75
Thu 28 Mar 2024 02:21:56 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|5
total_score: 10/70
6a2d5d5
Thu 28 Mar 2024 02:22:09 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
97a5e8f
Thu 28 Mar 2024 02:30:38 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ddc42b1
Thu 28 Mar 2024 02:33:51 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5448487
Thu 28 Mar 2024 02:34:10 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c1634e6
Thu 28 Mar 2024 02:35:03 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:12: error: variable ‘nodo’ set but not used [-Werror=unused-but-set-variable]
   44 |     Node * nodo = createNode(list);
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
74c289a
Thu 28 Mar 2024 02:35:10 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f06f082
